--- a/CodeFinal.ipynb
+++ b/CodeFinal.ipynb
@@ -2,40 +2,195 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Procesando hoja: Grado x\n",
-            "Procesando hoja: Grado xx\n",
-            "Entrenando modelo para: Curso A\n",
+            "Cargando modelo existente...\n",
+            "Procesando hoja: Primer Grado\n",
+            "Procesando hoja: Segundo Grado\n",
+            "Entrenando modelo para: Matematica\n",
             "Creando un nuevo modelo...\n",
             "Epoch 1/100\n",
-            "1/1 [==============================] - 1s 675ms/step - loss: 143.2603 - mae: 11.9691 - val_loss: 1.2046 - val_mae: 1.0975\n",
+            "1/1 [==============================] - 1s 676ms/step - loss: 120.6881 - mae: 10.9858 - val_loss: 174.5295 - val_mae: 13.2110\n",
             "Epoch 2/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 157.2960 - mae: 12.5418 - val_loss: 2.5363 - val_mae: 1.5926\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 101.8525 - mae: 10.0922 - val_loss: 165.0879 - val_mae: 12.8487\n",
             "Epoch 3/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 205.1282 - mae: 14.3223 - val_loss: 4.7818 - val_mae: 2.1867\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 100.8617 - mae: 10.0430 - val_loss: 153.7915 - val_mae: 12.4013\n",
             "Epoch 4/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 183.4641 - mae: 13.5449 - val_loss: 7.6657 - val_mae: 2.7687\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 85.5019 - mae: 9.2467 - val_loss: 142.8228 - val_mae: 11.9508\n",
             "Epoch 5/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 139.0237 - mae: 11.7908 - val_loss: 11.3427 - val_mae: 3.3679\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 79.5372 - mae: 8.9184 - val_loss: 131.9674 - val_mae: 11.4877\n",
             "Epoch 6/100\n",
-            "1/1 [==============================] - 0s 22ms/step - loss: 81.9720 - mae: 9.0538 - val_loss: 15.5132 - val_mae: 3.9387\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 123.1950 - mae: 11.0993 - val_loss: 120.6152 - val_mae: 10.9825\n",
             "Epoch 7/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 82.5704 - mae: 9.0868 - val_loss: 20.5249 - val_mae: 4.5304\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 129.0350 - mae: 11.3594 - val_loss: 109.2553 - val_mae: 10.4525\n",
             "Epoch 8/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 139.2478 - mae: 11.8003 - val_loss: 26.1609 - val_mae: 5.1148\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 144.7848 - mae: 12.0327 - val_loss: 98.3281 - val_mae: 9.9161\n",
             "Epoch 9/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 38.0170 - mae: 6.1658 - val_loss: 32.7377 - val_mae: 5.7217\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 47.3452 - mae: 6.8808 - val_loss: 87.1556 - val_mae: 9.3357\n",
             "Epoch 10/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 42.9205 - mae: 6.5514 - val_loss: 39.8895 - val_mae: 6.3158\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 96.7000 - mae: 9.8336 - val_loss: 77.2265 - val_mae: 8.7879\n",
             "Epoch 11/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 110.5777 - mae: 10.5156 - val_loss: 47.7243 - val_mae: 6.9083\n",
-            "Error al leer el archivo: Failed to convert a NumPy array to a Tensor (Unsupported object type float).\n"
+            "1/1 [==============================] - 0s 23ms/step - loss: 94.6096 - mae: 9.7267 - val_loss: 68.1884 - val_mae: 8.2576\n",
+            "Epoch 12/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 38.3053 - mae: 6.1891 - val_loss: 59.4330 - val_mae: 7.7093\n",
+            "Epoch 13/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 37.2119 - mae: 6.1002 - val_loss: 51.0234 - val_mae: 7.1431\n",
+            "Epoch 14/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 25.9503 - mae: 5.0941 - val_loss: 43.0822 - val_mae: 6.5637\n",
+            "Epoch 15/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 20.3231 - mae: 4.5081 - val_loss: 35.7606 - val_mae: 5.9800\n",
+            "Epoch 16/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 16.1867 - mae: 4.0233 - val_loss: 29.2697 - val_mae: 5.4101\n",
+            "Epoch 17/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 6.1271 - mae: 2.4753 - val_loss: 23.5854 - val_mae: 4.8565\n",
+            "Epoch 18/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 9.1984 - mae: 3.0329 - val_loss: 18.4523 - val_mae: 4.2956\n",
+            "Epoch 19/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 32.2837 - mae: 5.6819 - val_loss: 13.8423 - val_mae: 3.7205\n",
+            "Epoch 20/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.0801 - mae: 0.2830 - val_loss: 10.1820 - val_mae: 3.1909\n",
+            "Epoch 21/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 57.3702 - mae: 7.5743 - val_loss: 6.9328 - val_mae: 2.6330\n",
+            "Epoch 22/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 2.2619 - mae: 1.5040 - val_loss: 4.5935 - val_mae: 2.1433\n",
+            "Epoch 23/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 1.1637 - mae: 1.0787 - val_loss: 2.7822 - val_mae: 1.6680\n",
+            "Epoch 24/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.1136 - mae: 0.3370 - val_loss: 1.4923 - val_mae: 1.2216\n",
+            "Epoch 25/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 9.3471 - mae: 3.0573 - val_loss: 0.7797 - val_mae: 0.8830\n",
+            "Epoch 26/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 2.1152 - mae: 1.4544 - val_loss: 0.3660 - val_mae: 0.6050\n",
+            "Epoch 27/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 1.3131 - mae: 1.1459 - val_loss: 0.1088 - val_mae: 0.3299\n",
+            "Epoch 28/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 3.7877 - mae: 1.9462 - val_loss: 0.0144 - val_mae: 0.1200\n",
+            "Epoch 29/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 70.6477 - mae: 8.4052 - val_loss: 0.0234 - val_mae: 0.1531\n",
+            "Epoch 30/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 0.1824 - mae: 0.4270 - val_loss: 0.0363 - val_mae: 0.1905\n",
+            "Epoch 31/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 25.8218 - mae: 5.0815 - val_loss: 0.1114 - val_mae: 0.3338\n",
+            "Epoch 32/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 20.4323 - mae: 4.5202 - val_loss: 0.3056 - val_mae: 0.5528\n",
+            "Epoch 33/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 11.3098 - mae: 3.3630 - val_loss: 0.4814 - val_mae: 0.6938\n",
+            "Epoch 34/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.6994 - mae: 0.8363 - val_loss: 0.6965 - val_mae: 0.8345\n",
+            "Epoch 35/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 10.9547 - mae: 3.3098 - val_loss: 1.0623 - val_mae: 1.0307\n",
+            "Epoch 36/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 24.8823 - mae: 4.9882 - val_loss: 1.7190 - val_mae: 1.3111\n",
+            "Epoch 37/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 5.2424 - mae: 2.2896 - val_loss: 2.3446 - val_mae: 1.5312\n",
+            "Epoch 38/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 4.6478 - mae: 2.1559 - val_loss: 2.8857 - val_mae: 1.6987\n",
+            "1/1 [==============================] - 0s 43ms/step\n",
+            "Entrenando modelo para: Comunicación\n",
+            "Epoch 1/100\n",
+            "1/1 [==============================] - 0s 49ms/step - loss: 16.9650 - mae: 4.1189 - val_loss: 1.1271 - val_mae: 1.0616\n",
+            "Epoch 2/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 39.8601 - mae: 6.3135 - val_loss: 0.8496 - val_mae: 0.9217\n",
+            "Epoch 3/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 1.3523 - mae: 1.1629 - val_loss: 0.6829 - val_mae: 0.8264\n",
+            "Epoch 4/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 1.0946 - mae: 1.0462 - val_loss: 0.5738 - val_mae: 0.7575\n",
+            "Epoch 5/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 3.6512 - mae: 1.9108 - val_loss: 0.4260 - val_mae: 0.6527\n",
+            "Epoch 6/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.2065 - mae: 0.4544 - val_loss: 0.3013 - val_mae: 0.5489\n",
+            "Epoch 7/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 19.2383 - mae: 4.3862 - val_loss: 0.2762 - val_mae: 0.5255\n",
+            "Epoch 8/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.1407 - mae: 0.3751 - val_loss: 0.2615 - val_mae: 0.5113\n",
+            "Epoch 9/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 5.3211 - mae: 2.3068 - val_loss: 0.1962 - val_mae: 0.4430\n",
+            "Epoch 10/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 28.4452 - mae: 5.3334 - val_loss: 0.1953 - val_mae: 0.4419\n",
+            "Epoch 11/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 0.4164 - mae: 0.6453 - val_loss: 0.1846 - val_mae: 0.4297\n",
+            "Epoch 12/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.0016 - mae: 0.0405 - val_loss: 0.1750 - val_mae: 0.4183\n",
+            "Epoch 13/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 35.9307 - mae: 5.9942 - val_loss: 0.2274 - val_mae: 0.4769\n",
+            "Epoch 14/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 24.4978 - mae: 4.9495 - val_loss: 0.3505 - val_mae: 0.5920\n",
+            "Epoch 15/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 3.4084 - mae: 1.8462 - val_loss: 0.5321 - val_mae: 0.7295\n",
+            "Epoch 16/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 1.0641 - mae: 1.0316 - val_loss: 0.6948 - val_mae: 0.8335\n",
+            "Epoch 17/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.0308 - mae: 0.1755 - val_loss: 0.8698 - val_mae: 0.9326\n",
+            "Epoch 18/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 1.7895 - mae: 1.3377 - val_loss: 1.1023 - val_mae: 1.0499\n",
+            "Epoch 19/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.3369 - mae: 0.5804 - val_loss: 1.3662 - val_mae: 1.1688\n",
+            "Epoch 20/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 0.0819 - mae: 0.2863 - val_loss: 1.6452 - val_mae: 1.2827\n",
+            "Epoch 21/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 32.9394 - mae: 5.7393 - val_loss: 2.1865 - val_mae: 1.4787\n",
+            "Epoch 22/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 1.6088 - mae: 1.2684 - val_loss: 2.8269 - val_mae: 1.6813\n",
+            "1/1 [==============================] - 0s 16ms/step\n",
+            "Entrenando modelo para: Ingles\n",
+            "Epoch 1/100\n",
+            "1/1 [==============================] - 0s 51ms/step - loss: 2.7114 - mae: 1.6466 - val_loss: 3.3650 - val_mae: 1.8344\n",
+            "Epoch 2/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 18.2636 - mae: 4.2736 - val_loss: 4.1298 - val_mae: 2.0322\n",
+            "Epoch 3/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 25.8029 - mae: 5.0797 - val_loss: 4.3834 - val_mae: 2.0937\n",
+            "Epoch 4/100\n",
+            "1/1 [==============================] - 0s 30ms/step - loss: 0.4239 - mae: 0.6511 - val_loss: 4.5719 - val_mae: 2.1382\n",
+            "Epoch 5/100\n",
+            "1/1 [==============================] - 0s 32ms/step - loss: 54.2566 - mae: 7.3659 - val_loss: 3.9025 - val_mae: 1.9755\n",
+            "Epoch 6/100\n",
+            "1/1 [==============================] - 0s 32ms/step - loss: 3.3313 - mae: 1.8252 - val_loss: 3.2232 - val_mae: 1.7953\n",
+            "Epoch 7/100\n",
+            "1/1 [==============================] - 0s 27ms/step - loss: 0.1078 - mae: 0.3284 - val_loss: 2.6527 - val_mae: 1.6287\n",
+            "Epoch 8/100\n",
+            "1/1 [==============================] - 0s 30ms/step - loss: 2.0591 - mae: 1.4349 - val_loss: 2.1060 - val_mae: 1.4512\n",
+            "Epoch 9/100\n",
+            "1/1 [==============================] - 0s 28ms/step - loss: 9.4687 - mae: 3.0771 - val_loss: 1.5008 - val_mae: 1.2251\n",
+            "Epoch 10/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 1.4827 - mae: 1.2177 - val_loss: 1.0886 - val_mae: 1.0434\n",
+            "Epoch 11/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 0.1590 - mae: 0.3987 - val_loss: 0.7605 - val_mae: 0.8721\n",
+            "Epoch 12/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 0.8208 - mae: 0.9060 - val_loss: 0.5388 - val_mae: 0.7341\n",
+            "Epoch 13/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 0.0263 - mae: 0.1623 - val_loss: 0.3784 - val_mae: 0.6152\n",
+            "Epoch 14/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 10.2407 - mae: 3.2001 - val_loss: 0.2013 - val_mae: 0.4486\n",
+            "Epoch 15/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 12.3771 - mae: 3.5181 - val_loss: 0.0478 - val_mae: 0.2186\n",
+            "Epoch 16/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 3.0745 - mae: 1.7534 - val_loss: 7.2250e-04 - val_mae: 0.0269\n",
+            "Epoch 17/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 11.5831 - mae: 3.4034 - val_loss: 0.1000 - val_mae: 0.3161\n",
+            "Epoch 18/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 1.8852 - mae: 1.3730 - val_loss: 0.3578 - val_mae: 0.5982\n",
+            "Epoch 19/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 2.4097 - mae: 1.5523 - val_loss: 0.6832 - val_mae: 0.8266\n",
+            "Epoch 20/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 38.3428 - mae: 6.1922 - val_loss: 1.3747 - val_mae: 1.1725\n",
+            "Epoch 21/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 0.8093 - mae: 0.8996 - val_loss: 2.1535 - val_mae: 1.4675\n",
+            "Epoch 22/100\n",
+            "1/1 [==============================] - 0s 27ms/step - loss: 3.2736 - mae: 1.8093 - val_loss: 2.9107 - val_mae: 1.7061\n",
+            "Epoch 23/100\n",
+            "1/1 [==============================] - 0s 26ms/step - loss: 0.4903 - mae: 0.7002 - val_loss: 3.6428 - val_mae: 1.9086\n",
+            "Epoch 24/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 40.4650 - mae: 6.3612 - val_loss: 4.1416 - val_mae: 2.0351\n",
+            "Epoch 25/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 1.1230 - mae: 1.0597 - val_loss: 4.6949 - val_mae: 2.1668\n",
+            "Epoch 26/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 2.8798 - mae: 1.6970 - val_loss: 5.1148 - val_mae: 2.2616\n",
+            "1/1 [==============================] - 0s 15ms/step\n"
           ]
         }
       ],
@@ -140,18 +295,6 @@
       "display_name": "Python 3 (vanilla)",
       "language": "python",
       "name": "vanilla"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.11.3"
     }
   },
   "nbformat": 4,
